--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -47,6 +47,7 @@
                                     <outlet property="nameLabel" destination="xLb-Uq-mM2" id="f0q-R3-mAP"/>
                                     <outlet property="photoImageView" destination="i8I-V7-cH7" id="iYZ-2p-1UV"/>
                                     <outlet property="ratingControl" destination="J5m-xG-HtQ" id="vFz-T6-LJm"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="Thp-oT-637"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -180,10 +181,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ng7-Y3-qXP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="109.82142857142857"/>
+            <point key="canvasLocation" x="1057" y="463"/>
         </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="640" height="360"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Thp-oT-637"/>
+    </inferredMetricsTieBreakers>
 </document>
